feat: matt's offline example player

--- a/example/ios/BitmovinPlayerReactNativeExample/Info.plist
+++ b/example/ios/BitmovinPlayerReactNativeExample/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BitmovinPlayerLicenseKey</key>
-	<string>ENTER_LICENSE_KEY</string>
+	<string>4766495e-67aa-4c7e-9992-5b70675b0660</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
