--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator=\"iPhone 14\"",
     "start": "react-native start"
   },
   "dependencies": {
