--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
-      <meta-data android:name="BITMOVIN_PLAYER_LICENSE_KEY" android:value="ENTER_LICENSE_KEY" />
+      <meta-data android:name="BITMOVIN_PLAYER_LICENSE_KEY" android:value="4766495e-67aa-4c7e-9992-5b70675b0660" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
