--- a/example/package.json
+++ b/example/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios --simulator=\"iPhone 14\"",
+    "iosdevice": "react-native run-ios --device",
     "start": "react-native start"
   },
   "dependencies": {
